Fix block spacing on talent sourcing page

--- a/_css/layout/_sections.scss
+++ b/_css/layout/_sections.scss
@@ -694,7 +694,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 15% 10% 10% 10%;
+    padding: 15% 10% 5% 10%;
     @include breakpoint(large down) {
       font-size: 2rem;
     }
